# pytable

./: README.md  main.py  pyproject.toml  todo.txt
pytable/: __init__.py  utils.py
pytable/table/: __init__.py  column.py  table_builder.py
res/: bulkyhospital.csv  contentless.csv  hospital.csv
tests/: test_config_changes.py  test_draw_table.py
