[tool.poetry]
name = "pytable"
version = "0.1.0"
description = "A cli tool for creating tables"
authors = ["Leo Ngari <ngareoel@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
